--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,20 @@ version: '2'
 
 services:
   ntp:
-    #image: mcchae/ntp-server
+    #image: mcchae/ntp-server   # TODO: service problem
     image: cturra/ntp
     container_name: ntp_server
     ports:
-    - "123:123/udp"
+      - 123:123/udp
     cap_add:
-    - SYS_NICE
-    - SYS_RESOURCE
-    - SYS_TIME
+      - SYS_NICE
+      - SYS_RESOURCE
+      - SYS_TIME
   ntptest:
     image: ubuntu
     container_name: ntp_client
     links:
-    - ntp
+      - ntp
     command: /bin/sleep 1000
     # apt update && apt install -y iputils-ping ntpdate
     # ntpdate -q -t 1 ntp
