[2019년 4월  1일 월요일 16시 38분 06초 KST] from build_docker.sh

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,9 @@ version: '2'
 
 services:
   ntp:
-    #image: mcchae/ntp-server   # TODO: service problem
-    image: cturra/ntp
+    image: mcchae/ntp-server   
+    # TODO: service problem
+    #image: cturra/ntp
     container_name: ntp_server
     ports:
       - 123:123/udp
