--- a/ntpd.conf
+++ b/ntpd.conf
@@ -7,5 +7,5 @@ listen on *
 #server time3.google.com
 #server time4.google.com
 
-server 127.127.1.0
+server 127.127.1.0 prefer
 fudge 127.127.1.0 stratum 10
