--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,8 @@ version: '2'
 
 services:
   ntp:
-    #image: mcchae/ntp-server   
-    # TODO: service problem
-    image: cturra/ntp
+    image: mcchae/ntp-server   
+    #image: cturra/ntp
     container_name: ntp_server
     ports:
       - 123:123/udp
@@ -12,6 +11,7 @@ services:
       - SYS_NICE
       - SYS_RESOURCE
       - SYS_TIME
+    # tcpdump -i any -nn udp
   ntptest:
     image: ubuntu
     container_name: ntp_client
@@ -19,4 +19,4 @@ services:
       - ntp
     command: /bin/sleep 1000
     # apt update && apt install -y iputils-ping ntpdate
-    # ntpdate -q -t 1 ntp
+    # ntpdate -q -o 2 -dv -p 1 -t 1 ntp
