[2019년 4월  1일 월요일 17시 04분 46초 KST] from build_docker.sh

--- a/ntpd.conf
+++ b/ntpd.conf
@@ -3,9 +3,13 @@
 listen on *
 
 server time1.google.com
+time1.google.com stratum 5
 server time2.google.com
+time2.google.com stratum 5
 server time3.google.com
+time3.google.com stratum 5
 server time4.google.com
+time4.google.com stratum 5
 
 #server 127.127.1.0 prefer
 #fudge 127.127.1.0 stratum 10
