[2019년 4월  1일 월요일 17시 08분 08초 KST] from build_docker.sh

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '2'
 
 services:
   ntp:
-    image: mcchae/ntp-server   
-    #image: cturra/ntp
+    #image: mcchae/ntp-server   
+    image: cturra/ntp
     container_name: ntp_server
     ports:
       - 123:123/udp
