--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
-version: '2'
+version: '3.4'
 
 services:
   ntp:
-    #image: mcchae/ntp-server   
-    image: cturra/ntp
+    image: mcchae/ntp-server   # TODO: 
+    #image: cturra/ntp
     container_name: ntp_server
     ports:
       - 123:123/udp
