--- a/ntpd.conf
+++ b/ntpd.conf
@@ -2,10 +2,10 @@
 
 listen on *
 
-server time1.google.com iburst
-server time2.google.com iburst
-server time3.google.com iburst
-server time4.google.com iburst
+server time1.google.com
+server time2.google.com
+server time3.google.com
+server time4.google.com
 
 #server 127.127.1.0 prefer
 #fudge 127.127.1.0 stratum 10
