[2019년 4월  1일 월요일 17시 36분 36초 KST] from build_docker.sh

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.4'
 
 services:
   ntp:
-    #image: mcchae/ntp-server   # TODO: invalid versice error
-    image: cturra/ntp
+    image: mcchae/ntp-server   # TODO: invalid versice error
+    #image: cturra/ntp
     container_name: ntp_server
     ports:
       - 123:123/udp
